--- a/fesco.plist
+++ b/fesco.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.tydic.mideaer</string>
+				<string>com.tydic.fesco</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
