--- a/fesco.plist
+++ b/fesco.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://203.93.250.12:8090/sts/mobile/queryVisionByType.json?client_type=1</string>
+					<string>60.166.24.30:8888/Fesco.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.tydic.stockmanager</string>
+				<string>com.tydic.fesco</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
