--- a/fesco.plist
+++ b/fesco.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>60.166.24.30:8888/Fesco.ipa</string>
+					<string>http://60.166.24.30:8888/Fesco.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
